# prediction_AI_model_comparison

./: README.md  main.py  pyproject.toml  requirements.txt
data/: PM_DATABASE.csv  corn_prices.csv  soy_prices.csv
data/corn/1/: corn_prices.csv
data/corn/10/: corn_prices.csv
data/corn/11/: corn_prices.csv
data/corn/12/: corn_prices.csv
data/corn/13/: corn_prices.csv
data/corn/14/: corn_prices.csv
data/corn/15/: corn_prices.csv
data/corn/16/: corn_prices.csv
data/corn/17/: corn_prices.csv
data/corn/18/: corn_prices.csv
data/corn/19/: corn_prices.csv
data/corn/2/: corn_prices.csv
data/corn/20/: corn_prices.csv
data/corn/21/: corn_prices.csv
data/corn/22/: corn_prices.csv
data/corn/23/: corn_prices.csv
data/corn/24/: corn_prices.csv
data/corn/25/: corn_prices.csv
data/corn/3/: corn_prices.csv
data/corn/4/: corn_prices.csv
data/corn/5/: corn_prices.csv
data/corn/6/: corn_prices.csv
data/corn/7/: corn_prices.csv
data/corn/8/: corn_prices.csv
data/corn/9/: corn_prices.csv
data/soy/1/: soy_prices.csv
data/soy/10/: soy_prices.csv
data/soy/11/: soy_prices.csv
data/soy/12/: soy_prices.csv
data/soy/13/: soy_prices.csv
data/soy/14/: soy_prices.csv
data/soy/15/: soy_prices.csv
data/soy/16/: soy_prices.csv
data/soy/19/: soy_prices.csv
data/soy/2/: soy_prices.csv
model/: lstm.ipynb  sarimax.ipynb  sarimax_and_lstm.ipynb  sarimax_and_lstm_top_5 copy.ipynb  test_data.csv  train_data.csv
pipeline/: corn_and_soy_data.ipynb  corn_main_locations.ipynb  pick_best_main_locations.ipynb  soy_main_locations.ipynb
(+13 files in other folders)
