[tool.poetry]
name = "prediction-ai-model-comparison"
version = "0.1.0"
description = "software for comparing two prediction ai models"
authors = ["Guilherme Hachimine <gui.hachimine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas-datareader = "^0.10.0"
tensorflow = "^2.16.1"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
